# notification-tray

./: .SRCINFO  .gitattributes  .gitconfig.local  .gitignore  CLAUDE.md  CMakeLists.txt  PKGBUILD  README.md  main.py  notification-tray.install  notification-tray.service  renovate.json  requirements.txt
include/: notification_cacher.h  notification_service.h  notification_timer.h  notification_types.h  notification_widget.h  notifier.h  system_tray_file_browser.h  tray.h
include/utils/: logging.h  paths.h  settings.h
scripts/: migrate_settings.py
src/: main.cpp  notification_cacher.cpp  notification_service.cpp  notification_timer.cpp  notification_widget.cpp  notification_widget.ui  notifier.cpp  system_tray_file_browser.cpp  tray.cpp
src/notification_tray/: __init__.py
src/notification_tray/components/: file_watcher.py  notification_cacher.py  notification_service.py  notification_widget.py  notifier.py  tray.py
src/notification_tray/types/: notification.py
src/notification_tray/utils/: fp.py  logging.py  paths.py  settings.py
src/utils/: logging.cpp  paths.cpp  settings.cpp
tests/: test_logging.cpp  test_main.cpp  test_notification_cacher.cpp  test_notification_service.cpp  test_notification_timer.cpp  test_notification_types.cpp  test_notifier.cpp  test_paths.cpp  test_settings.cpp
